Fix for bug 118830 . Make header file C++-safe. r=nelson