security/nss/lib/util/secdert.h
@@ -157,6 +157,8 @@ struct DERTemplateStr {
     (item)->len = ((item)->len + 7) >> 3; \
 }
 
+SEC_BEGIN_PROTOS
+
 extern DERTemplate SECAnyTemplate[];
 extern DERTemplate SECBitStringTemplate[];
 extern DERTemplate SECBooleanTemplate[];
@@ -169,5 +171,7 @@ extern DERTemplate SECPrintableStringTemplate[];
 extern DERTemplate SECT61StringTemplate[];
 extern DERTemplate SECUTCTimeTemplate[];
 extern DERTemplate SECAlgorithmIDTemplate[];
+
+SEC_END_PROTOS
 
 #endif /* _SECDERT_H_ */
